# chan_dongle-sim7600

./: .pre-commit-config.yaml  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  pdiscovery.c
.github/workflows/: ci.yml  pre-commit.yml  static-analysis.yml  thanks-for-nothing-travis.yml
tests/: Makefile.am
